--- a/runner_cisco_cfg.ipynb
+++ b/runner_cisco_cfg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "from nornir_netmiko.tasks import netmiko_send_command, netmiko_send_config\n",
     "from nornir_jinja2.plugins.tasks import template_file\n",
     "from nornir_utils.plugins.functions import print_result\n",
-    "from nornir.core.task import Task, Result"
+    "from nornir.core.task import Task, Result\n",
+    "from nornir_utils.plugins.tasks import networking"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +26,7 @@
     "    runner={\n",
     "        \"plugin\": \"threaded\",\n",
     "        \"options\": {\n",
-    "            \"num_workers\": 50,\n",
+    "            \"num_workers\": 10,\n",
     "        },\n",
     "    },\n",
     "\n",
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,24 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SW-1\u001b[0m\n",
-      "\u001b[0mSW-2\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sw = nr.filter(type=\"l2\",)\n",
     "\n",
     "for host in sw.inventory.hosts.keys():\n",
-    "    print(nr.inventory.hosts[host])\n",
+    "   # print(nr.inventory.hosts[host])\n",
     "   # print(nr.inventory.hosts[host].data[\"interface_list\"])\n",
     "    nr.inventory.hosts[host].username = \"sa\"\n",
     "    nr.inventory.hosts[host].password = \"Qwerty11\"\n",
@@ -79,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +80,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" def get_config(task):\n",
+    "    r = task.run(\n",
+    "        task=networking.\n",
+    "    ) \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" config = sw.run(\n",
+    "    name='Получение конфигурации',\n",
+    "    task=get_config\n",
+    ")\n",
+    "print_result(config) \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,48 +127,60 @@
     "        cmd_verify=True\n",
     "    )\n",
     "    \n",
-    "    # --------------------------------- Configure administrator information ------------ ----------------\n",
+    "    # --------------------------------- Configure administrator information ----------------------------\n",
     "    # Получаем шаблон и отправляем в конфигурацию\n",
     "    ios_user_template = task.run(\n",
-    "        name='1 шаг. 1: Получаем шаблон конфигурации пользователей',\n",
+    "        name='2-1: Получаем шаблон конфигурации пользователей',\n",
     "        task=template_file,\n",
-    "        template='1-cisco_ios_user.template',\n",
+    "        template='cisco_ios_user.template',\n",
     "        path=templates_path\n",
     "    )\n",
-    "    # Introducing in a specific configuration, configuring the device, pay attention to \".split ('\\ n')\" Convert configuration to a list\n",
     "    task.run(\n",
     "        task=netmiko_send_config,\n",
-    "        name='1 шаг. 2: Настройка пользователей',\n",
+    "        name='2-2: Настройка пользователей',\n",
     "        config_commands=ios_user_template.result.split('\\n'),\n",
     "        cmd_verify=True\n",
-    "    )\n",
-    "\n",
-    "    ios_ntp_template = task.run(\n",
-    "        name='3 шаг. 1: Получаем шаблон конфигурации ntp',\n",
-    "        task=template_file,\n",
-    "        template='cisco_ios_ntp.template',\n",
-    "        path=templates_path\n",
-    "    )\n",
-    "    task.run(\n",
-    "        task=netmiko_send_config,\n",
-    "        name='3 шаг. 2: Настройка ntp',\n",
-    "        config_commands=ios_ntp_template.result.split('\\n'),\n",
-    "        cmd_verify=True\n",
-    "    )\n",
-    "    #-------------\n",
+    "    ) \n",
+    "    #-------------DNS-------------\n",
     "    ios_dns_template = task.run(\n",
-    "        name='4 шаг. 1: Получаем шаблон конфигурации dns',\n",
+    "        name='3-1: Получаем шаблон конфигурации dns',\n",
     "        task=template_file,\n",
     "        template='cisco_ios_dns.template',\n",
     "        path=templates_path\n",
     "    )\n",
     "    task.run(\n",
     "        task=netmiko_send_config,\n",
-    "        name='4 шаг. 2: Настройка dns',\n",
+    "        name='3-2: Настройка dns',\n",
     "        config_commands=ios_dns_template.result.split('\\n'),\n",
     "        cmd_verify=True\n",
+    "    ) \n",
+    "    #-------------NTP-------------\n",
+    "    ios_ntp_template = task.run(\n",
+    "        name='4-1: Получаем шаблон конфигурации ntp',\n",
+    "        task=template_file,\n",
+    "        template='cisco_ios_ntp.template',\n",
+    "        path=templates_path\n",
     "    )\n",
-    "    #-------------\n",
+    "    task.run(\n",
+    "        task=netmiko_send_config,\n",
+    "        name='4-2: Настройка ntp',\n",
+    "        config_commands=ios_ntp_template.result.split('\\n'),\n",
+    "        cmd_verify=True\n",
+    "    )\n",
+    "   #-------------LOG-------------\n",
+    "    ios_logging_template = task.run(\n",
+    "        name='5-1: Получаем шаблон конфигурации logging',\n",
+    "        task=template_file,\n",
+    "        template='cisco_ios_logging.template',\n",
+    "        path=templates_path\n",
+    "    )\n",
+    "    task.run(\n",
+    "        task=netmiko_send_config,\n",
+    "        name='5-2: Настройка syslog',\n",
+    "        config_commands=ios_logging_template.result.split('\\n'),\n",
+    "        cmd_verify=True\n",
+    "    )\n",
+    "    #-------------END-------------\n",
     "    return Result(\n",
     "        host=task.host,\n",
     "        result=f\"{task.host} доступен\"\n",
@@ -161,138 +189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m\u001b[36mНастройка коммутаторов**********************************************************\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[34m* SW-1 ** changed : True *******************************************************\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[32mvvvv Настройка коммутаторов ** changed : False vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv INFO\u001b[0m\n",
-      "\u001b[0mSW-1 доступен\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[32m---- 2 шаг. 1: Получаем шаблон конфигурации интерфейсов ** changed : False ----- INFO\u001b[0m\n",
-      "\u001b[0m    interface vlan1\n",
-      "          description management\n",
-      "          ip address 10.30.253.11 255.255.255.0\n",
-      "          no shutdown\n",
-      "\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[33m---- 2 шаг. 2: Настройка интерфейсов ** changed : True ------------------------- INFO\u001b[0m\n",
-      "\u001b[0mconfigure terminal\n",
-      "Enter configuration commands, one per line.  End with CNTL/Z.\n",
-      "Switch(config)#    interface vlan1\n",
-      "Switch(config-if)#          description management\n",
-      "Switch(config-if)#          ip address 10.30.253.11 255.255.255.0\n",
-      "Switch(config-if)#          no shutdown\n",
-      "Switch(config-if)#\n",
-      "Switch(config-if)#end\n",
-      "Switch#\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[32m---- 1 шаг. 1: Получаем шаблон конфигурации пользователей ** changed : False --- INFO\u001b[0m\n",
-      "\u001b[0mip domain name plgn.com\n",
-      "enable secret Qwerty11\n",
-      "    username sa privilege 15 password Qwerty11\n",
-      "\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[33m---- 1 шаг. 2: Настройка пользователей ** changed : True ----------------------- INFO\u001b[0m\n",
-      "\u001b[0mconfigure terminal\n",
-      "Enter configuration commands, one per line.  End with CNTL/Z.\n",
-      "Switch(config)#ip domain name plgn.com\n",
-      "Switch(config)#enable secret Qwerty11\n",
-      "Switch(config)#    username sa privilege 15 password Qwerty11\n",
-      "ERROR: Can not have both a user password and a user secret.\n",
-      "Please choose one or the other.\n",
-      "Switch(config)#\n",
-      "Switch(config)#end\n",
-      "Switch#\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[32m---- 3 шаг. 1: Получаем шаблон конфигурации ntp ** changed : False ------------- INFO\u001b[0m\n",
-      "\u001b[0mntp logging\n",
-      "ntp source vlan1\n",
-      "ntp server 10.30.24.24\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[33m---- 3 шаг. 2: Настройка ntp ** changed : True --------------------------------- INFO\u001b[0m\n",
-      "\u001b[0mconfigure terminal\n",
-      "Enter configuration commands, one per line.  End with CNTL/Z.\n",
-      "Switch(config)#ntp logging\n",
-      "Switch(config)#ntp source vlan1\n",
-      "Switch(config)#ntp server 10.30.24.24\n",
-      "Switch(config)#end\n",
-      "Switch#\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[32m---- 4 шаг. 1: Получаем шаблон конфигурации dns ** changed : False ------------- INFO\u001b[0m\n",
-      "\u001b[0mip domain lookup source-interface vlan1\n",
-      "ip domain name plgn.com\n",
-      "ip name-server 10.30.8.8\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[33m---- 4 шаг. 2: Настройка dns ** changed : True --------------------------------- INFO\u001b[0m\n",
-      "\u001b[0mconfigure terminal\n",
-      "Enter configuration commands, one per line.  End with CNTL/Z.\n",
-      "Switch(config)#ip domain lookup source-interface vlan1\n",
-      "Switch(config)#ip domain name plgn.com\n",
-      "Switch(config)#ip name-server 10.30.8.8\n",
-      "Switch(config)#end\n",
-      "Switch#\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[32m^^^^ END Настройка коммутаторов ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[34m* SW-2 ** changed : True *******************************************************\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[32mvvvv Настройка коммутаторов ** changed : False vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv INFO\u001b[0m\n",
-      "\u001b[0mSW-2 доступен\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[32m---- 2 шаг. 1: Получаем шаблон конфигурации интерфейсов ** changed : False ----- INFO\u001b[0m\n",
-      "\u001b[0m    interface vlan1\n",
-      "          description management\n",
-      "          ip address 10.30.253.12 255.255.255.0\n",
-      "          no shutdown\n",
-      "\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[33m---- 2 шаг. 2: Настройка интерфейсов ** changed : True ------------------------- INFO\u001b[0m\n",
-      "\u001b[0mconfigure terminal\n",
-      "Enter configuration commands, one per line.  End with CNTL/Z.\n",
-      "Switch(config)#    interface vlan1\n",
-      "Switch(config-if)#          description management\n",
-      "Switch(config-if)#          ip address 10.30.253.12 255.255.255.0\n",
-      "Switch(config-if)#          no shutdown\n",
-      "Switch(config-if)#\n",
-      "Switch(config-if)#end\n",
-      "Switch#\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[32m---- 1 шаг. 1: Получаем шаблон конфигурации пользователей ** changed : False --- INFO\u001b[0m\n",
-      "\u001b[0mip domain name plgn.com\n",
-      "enable secret Qwerty11\n",
-      "    username sa privilege 15 password Qwerty11\n",
-      "\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[33m---- 1 шаг. 2: Настройка пользователей ** changed : True ----------------------- INFO\u001b[0m\n",
-      "\u001b[0mconfigure terminal\n",
-      "Enter configuration commands, one per line.  End with CNTL/Z.\n",
-      "Switch(config)#ip domain name plgn.com\n",
-      "Switch(config)#enable secret Qwerty11\n",
-      "Switch(config)#    username sa privilege 15 password Qwerty11\n",
-      "ERROR: Can not have both a user password and a user secret.\n",
-      "Please choose one or the other.\n",
-      "Switch(config)#\n",
-      "Switch(config)#end\n",
-      "Switch#\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[32m---- 3 шаг. 1: Получаем шаблон конфигурации ntp ** changed : False ------------- INFO\u001b[0m\n",
-      "\u001b[0mntp logging\n",
-      "ntp source vlan1\n",
-      "ntp server 10.30.24.24\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[33m---- 3 шаг. 2: Настройка ntp ** changed : True --------------------------------- INFO\u001b[0m\n",
-      "\u001b[0mconfigure terminal\n",
-      "Enter configuration commands, one per line.  End with CNTL/Z.\n",
-      "Switch(config)#ntp logging\n",
-      "Switch(config)#ntp source vlan1\n",
-      "Switch(config)#ntp server 10.30.24.24\n",
-      "Switch(config)#end\n",
-      "Switch#\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[32m---- 4 шаг. 1: Получаем шаблон конфигурации dns ** changed : False ------------- INFO\u001b[0m\n",
-      "\u001b[0mip domain lookup source-interface vlan1\n",
-      "ip domain name plgn.com\n",
-      "ip name-server 10.30.8.8\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[33m---- 4 шаг. 2: Настройка dns ** changed : True --------------------------------- INFO\u001b[0m\n",
-      "\u001b[0mconfigure terminal\n",
-      "Enter configuration commands, one per line.  End with CNTL/Z.\n",
-      "Switch(config)#ip domain lookup source-interface vlan1\n",
-      "Switch(config)#ip domain name plgn.com\n",
-      "Switch(config)#ip name-server 10.30.8.8\n",
-      "Switch(config)#end\n",
-      "Switch#\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[32m^^^^ END Настройка коммутаторов ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "run_result = sw.run(task=config_switches,name='Настройка коммутаторов')\n",
     "print_result(run_result)"
