--- a/Runner.ipynb
+++ b/Runner.ipynb
@@ -99,6 +99,15 @@
     "run_result = sw.run(task=config_sw,name='Configuration Switches')\n",
     "print_result(run_result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(netmiko_send_command)"
+   ]
   }
  ],
  "metadata": {
