--- a/runner_nb_cfg.ipynb
+++ b/runner_nb_cfg.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,31 +72,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "devices = nb.dcim.devices.all()\n",
-    "for device in devices:\n",
-    "    print(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' for device in devices:\\n    print(device) '"
+       "' devices = nb.dcim.devices.all()\\nfor device in devices:\\n    print(device) '"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "\"\"\" devices = nb.dcim.devices.all()\n",
+    "for device in devices:\n",
+    "    print(device) \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#device_type = nb.dcim.device_types.get(slug='cisco_ios').id\n",
     "#device_type\n",
@@ -104,33 +104,21 @@
     "    role='access_switch',\n",
     "    site = 'plgn',\n",
     "    device_type = 'cisco_ios'\n",
-    ")\n",
-    "\"\"\" for device in devices:\n",
-    "    print(device) \"\"\""
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sa\u001b[0m\n",
-      "\u001b[0msa\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "host = \"\"\n",
     "for host in devices:\n",
-    "    #print(host)\n",
-    "    #print(nr.inventory.hosts[host].username)\n",
-    "    print(nr.inventory.hosts[host.name].username)\n",
-    "#print(nr.inventory.hosts[].username)"
+    "    uname = nr.inventory.hosts[host.name].username\n",
+    "    passw = nr.inventory.hosts[host.name].password\n",
+    "    secret = nr.inventory.hosts[host.name].secret\n",
+    "    print(host,uname,passw, secret)"
    ]
   }
  ],
