--- a/runner_cisco_cfg.ipynb
+++ b/runner_cisco_cfg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "from nornir_jinja2.plugins.tasks import template_file\n",
     "from nornir_utils.plugins.functions import print_result\n",
     "from nornir.core.task import Task, Result\n",
-    "from nornir_utils.plugins.tasks import networking"
+    "from nornir_utils.plugins.tasks import networking\n",
+    "from nornir_napalm.plugins.tasks import napalm_get"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +30,6 @@
     "            \"num_workers\": 10,\n",
     "        },\n",
     "    },\n",
-    "\n",
     "    inventory={\n",
     "        \"plugin\": \"SimpleInventory\",\n",
     "        \"options\": {\n",
@@ -43,7 +43,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' sw = nr.filter(type=\"l2\",)\\n#result = sw.run(task=napalm_get,getters=[\"facts\"])\\nresult = sw.run(netmiko_send_command, command_string=\"show ip int brief\")\\nprint_result(result) '"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\" sw = nr.filter(type=\"l2\",)\n",
+    "#result = sw.run(task=napalm_get,getters=[\"facts\"])\n",
+    "result = sw.run(netmiko_send_command, command_string=\"show ip int brief\")\n",
+    "print_result(result) \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,12 +93,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#result = sw.run(netmiko_send_command, command_string=\"show ip int brief\")\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m result \u001b[38;5;241m=\u001b[39m sw\u001b[38;5;241m.\u001b[39mrun(task\u001b[38;5;241m=\u001b[39mnapalm_get,getters\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfacts\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m      3\u001b[0m print_result(result)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/nornir/core/__init__.py:139\u001b[0m, in \u001b[0;36mNornir.run\u001b[0;34m(self, task, raise_on_error, on_good, on_failed, name, **kwargs)\u001b[0m\n\u001b[1;32m    136\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    137\u001b[0m     logger\u001b[39m.\u001b[39mwarning(\u001b[39m\"\u001b[39m\u001b[39mTask \u001b[39m\u001b[39m%r\u001b[39;00m\u001b[39m has not been run – 0 hosts selected\u001b[39m\u001b[39m\"\u001b[39m, task\u001b[39m.\u001b[39mname)\n\u001b[0;32m--> 139\u001b[0m result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrunner\u001b[39m.\u001b[39;49mrun(task, run_on)\n\u001b[1;32m    141\u001b[0m raise_on_error \u001b[39m=\u001b[39m (\n\u001b[1;32m    142\u001b[0m     raise_on_error\n\u001b[1;32m    143\u001b[0m     \u001b[39mif\u001b[39;00m raise_on_error \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    144\u001b[0m     \u001b[39melse\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconfig\u001b[39m.\u001b[39mcore\u001b[39m.\u001b[39mraise_on_error\n\u001b[1;32m    145\u001b[0m )  \u001b[39m# noqa\u001b[39;00m\n\u001b[1;32m    146\u001b[0m \u001b[39mif\u001b[39;00m raise_on_error:\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/nornir/plugins/runners/__init__.py:40\u001b[0m, in \u001b[0;36mThreadedRunner.run\u001b[0;34m(self, task, hosts)\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[39mfor\u001b[39;00m host \u001b[39min\u001b[39;00m hosts:\n\u001b[1;32m     39\u001b[0m         future \u001b[39m=\u001b[39m pool\u001b[39m.\u001b[39msubmit(task\u001b[39m.\u001b[39mcopy()\u001b[39m.\u001b[39mstart, host)\n\u001b[0;32m---> 40\u001b[0m         futures\u001b[39m.\u001b[39mappend(future)\n\u001b[1;32m     42\u001b[0m \u001b[39mfor\u001b[39;00m future \u001b[39min\u001b[39;00m futures:\n\u001b[1;32m     43\u001b[0m     worker_result \u001b[39m=\u001b[39m future\u001b[39m.\u001b[39mresult()\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/concurrent/futures/_base.py:636\u001b[0m, in \u001b[0;36mExecutor.__exit__\u001b[0;34m(self, exc_type, exc_val, exc_tb)\u001b[0m\n\u001b[1;32m    635\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__exit__\u001b[39m(\u001b[39mself\u001b[39m, exc_type, exc_val, exc_tb):\n\u001b[0;32m--> 636\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mshutdown(wait\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[1;32m    637\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mFalse\u001b[39;00m\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/concurrent/futures/thread.py:236\u001b[0m, in \u001b[0;36mThreadPoolExecutor.shutdown\u001b[0;34m(self, wait)\u001b[0m\n\u001b[1;32m    234\u001b[0m \u001b[39mif\u001b[39;00m wait:\n\u001b[1;32m    235\u001b[0m     \u001b[39mfor\u001b[39;00m t \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_threads:\n\u001b[0;32m--> 236\u001b[0m         t\u001b[39m.\u001b[39;49mjoin()\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/threading.py:1011\u001b[0m, in \u001b[0;36mThread.join\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m   1008\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mcannot join current thread\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   1010\u001b[0m \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m-> 1011\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_wait_for_tstate_lock()\n\u001b[1;32m   1012\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1013\u001b[0m     \u001b[39m# the behavior of a negative timeout isn't documented, but\u001b[39;00m\n\u001b[1;32m   1014\u001b[0m     \u001b[39m# historically .join(timeout=x) for x<0 has acted as if timeout=0\u001b[39;00m\n\u001b[1;32m   1015\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_wait_for_tstate_lock(timeout\u001b[39m=\u001b[39m\u001b[39mmax\u001b[39m(timeout, \u001b[39m0\u001b[39m))\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/threading.py:1027\u001b[0m, in \u001b[0;36mThread._wait_for_tstate_lock\u001b[0;34m(self, block, timeout)\u001b[0m\n\u001b[1;32m   1025\u001b[0m \u001b[39mif\u001b[39;00m lock \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:  \u001b[39m# already determined that the C code is done\u001b[39;00m\n\u001b[1;32m   1026\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_is_stopped\n\u001b[0;32m-> 1027\u001b[0m \u001b[39melif\u001b[39;00m lock\u001b[39m.\u001b[39;49macquire(block, timeout):\n\u001b[1;32m   1028\u001b[0m     lock\u001b[39m.\u001b[39mrelease()\n\u001b[1;32m   1029\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_stop()\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "#result = sw.run(netmiko_send_command, command_string=\"show ip int brief\")\n",
-    "#print_result(result)"
+    "result = sw.run(task=napalm_get,getters=[\"facts\"])\n",
+    "print_result(result)"
    ]
   },
   {
