--- a/runner_nb_cfg.ipynb
+++ b/runner_nb_cfg.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,8 @@
     "from nornir_napalm.plugins.tasks import napalm_cli\n",
     "from nornir.core.filter import F\n",
     "#from nornir.core.inventory import Host\n",
-    "#import json"
+    "import json\n",
+    "import pprint"
    ]
   },
   {
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,9 +78,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 209,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\u001b[0m'get_interfaces_ip'\u001b[0m: \u001b[0m{\u001b[0m'Ethernet0/1'\u001b[0m: \u001b[0m{\u001b[0m'ipv4'\u001b[0m: \u001b[0m{\u001b[0m'10.30.1.108'\u001b[0m: \u001b[0m{\u001b[0m'prefix_length'\u001b[0m: \u001b[0m24\u001b[0m}\u001b[0m}\u001b[0m}\u001b[0m,\n",
+      "                       \u001b[0m'Vlan1'\u001b[0m: \u001b[0m{\u001b[0m'ipv4'\u001b[0m: \u001b[0m{\u001b[0m'10.30.252.12'\u001b[0m: \u001b[0m{\u001b[0m'prefix_length'\u001b[0m: \u001b[0m24\u001b[0m}\u001b[0m}\u001b[0m}\u001b[0m}\u001b[0m}\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "device_type = nb.dcim.device_types.get(slug='cisco_ios').id\n",
     "device_type\n",
@@ -96,17 +107,31 @@
     "    F(device_type__slug='cisco_ios')\n",
     "    )\n",
     "\n",
-    "#result = sw.run(task=napalm_get, getters=['get_interfaces_ip'])\n",
+    "result = sw.run(task=napalm_get, getters=['get_interfaces_ip'])\n",
     "#result = sw.run(napalm_cli,commands=[\"sh ip int brief\"])\n",
     "#result = sw.run(netmiko_send_command, command_string=\"show ip int brief\")\n",
-    "#print_result(result)\n"
+    "#print_result(result)\n",
+    "#print(json.dumps(result['SW-PLGN-1'].result, indent=2))\n",
+    "pprint.pprint(result['SW-PLGN-2'].result)\n",
+    "#print_result(result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 178,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' for i in interfaces:\\n    print(i) '"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "interface = nb.dcim.interfaces.get(name='',device='sw-plgn-1')\n",
     "interface\n",
@@ -216,56 +241,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m\u001b[36mНастройка коммутаторов**********************************************************\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[34m* SW-PLGN-1 ** changed : False *************************************************\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[31mvvvv Настройка коммутаторов ** changed : False vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv ERROR\u001b[0m\n",
-      "\u001b[0mSubtask: 2 шаг. 1: Получаем шаблон конфигурации интерфейсов (failed)\n",
-      "\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[31m---- 2 шаг. 1: Получаем шаблон конфигурации интерфейсов ** changed : False ----- ERROR\u001b[0m\n",
-      "\u001b[0mTraceback (most recent call last):\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/nornir/core/task.py\", line 99, in start\n",
-      "    r = self.task(self, **self.params)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/nornir_jinja2/plugins/tasks/template_file.py\", line 43, in template_file\n",
-      "    text = t.render(host=task.host, **kwargs)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/jinja2/environment.py\", line 1301, in render\n",
-      "    self.environment.handle_exception()\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/jinja2/environment.py\", line 936, in handle_exception\n",
-      "    raise rewrite_traceback_stack(source=source)\n",
-      "  File \"templates/cisco_ios_interface.template\", line 1, in top-level template code\n",
-      "    {% for i in host.interface_list %}\n",
-      "jinja2.exceptions.UndefinedError: 'nornir.core.inventory.Host object' has no attribute 'interface_list'\n",
-      "\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[31m^^^^ END Настройка коммутаторов ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[34m* SW-PLGN-2 ** changed : False *************************************************\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[31mvvvv Настройка коммутаторов ** changed : False vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv ERROR\u001b[0m\n",
-      "\u001b[0mSubtask: 2 шаг. 1: Получаем шаблон конфигурации интерфейсов (failed)\n",
-      "\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[31m---- 2 шаг. 1: Получаем шаблон конфигурации интерфейсов ** changed : False ----- ERROR\u001b[0m\n",
-      "\u001b[0mTraceback (most recent call last):\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/nornir/core/task.py\", line 99, in start\n",
-      "    r = self.task(self, **self.params)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/nornir_jinja2/plugins/tasks/template_file.py\", line 43, in template_file\n",
-      "    text = t.render(host=task.host, **kwargs)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/jinja2/environment.py\", line 1301, in render\n",
-      "    self.environment.handle_exception()\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/jinja2/environment.py\", line 936, in handle_exception\n",
-      "    raise rewrite_traceback_stack(source=source)\n",
-      "  File \"templates/cisco_ios_interface.template\", line 1, in top-level template code\n",
-      "    {% for i in host.interface_list %}\n",
-      "jinja2.exceptions.UndefinedError: 'nornir.core.inventory.Host object' has no attribute 'interface_list'\n",
-      "\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[31m^^^^ END Настройка коммутаторов ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "run_result = sw.run(task=config_switches,name='Настройка коммутаторов')\n",
     "print_result(run_result)"
