--- a/runner_nb_cfg.ipynb
+++ b/runner_nb_cfg.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
     "    inventory={\n",
     "        \"plugin\": \"NetBoxInventory2\",\n",
     "        \"options\": {\n",
-    "            \"nb_url\": \"http://10.30.1.226:8000\",\n",
+    "            \"nb_url\": \"http://10.30.1.101:8000\",\n",
     "            \"nb_token\": \"dc5b766afda60e647a9fcc384c736a9689da8618\",\n",
     "            \"group_file\": \"./inventory/groups.yml\",\n",
     "            \"defaults_file\": \"./inventory/defaults.yml\",\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,6 +74,119 @@
     "    nb_url,\n",
     "    token=nb_token\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(nb.dcim.devices.all())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GET ALL DEVICES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[SRV-PEV-1, SRV-PEV-2, SRV-PEV-5, SW-AMZ-PLGN, SW-PLGN-1, SW-PLGN-2]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb_site = 'plgn'\n",
+    "nb_role = 'plgn'\n",
+    "get_all_devices = list(nb.dcim.devices.filter(site = nb_site))\n",
+    "get_all_devices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GET ALL IP PREFIXES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Servers pool\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "nb_site = 'plgn'\n",
+    "nb_role = 'plgn'\n",
+    "IPv4 = 4\n",
+    "get_all_ip_prefixes = list(nb.ipam.prefixes.filter(site = nb_site, role = nb_role))\n",
+    "for ip_prefix in get_all_ip_prefixes:\n",
+    "    if ip_prefix.family.value == IPv4:\n",
+    "        print(ip_prefix.description)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GET ALL IP ADDRESSES PER DEVICE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10.30.1.105/24,\n",
+       " 10.30.1.108/24,\n",
+       " 10.30.1.248/24,\n",
+       " 10.30.1.251/24,\n",
+       " 10.30.1.252/24,\n",
+       " 10.91.254.52/24]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_all_ip_addresses = list(nb.ipam.ip_addresses.filter(device=get_all_devices))\n",
+    "get_all_ip_addresses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for device_ip in get_all_ip_addresses:\n",
+    "#    print(device_ip.interface.device.name)"
    ]
   },
   {
