--- a/runner_nb_cfg.ipynb
+++ b/runner_nb_cfg.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,8 @@
     "from nornir.core.filter import F\n",
     "#from nornir.core.inventory import Host\n",
     "import json\n",
-    "import pprint"
+    "import pprint\n",
+    "from ipaddress import IPv4Address"
    ]
   },
   {
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,23 +79,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(nb.dcim.devices.all())"
+    "#list(nb.dcim.devices.all())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "GET ALL DEVICES"
+    "GET ALL DEVICES PER SITE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +104,7 @@
        "[SRV-PEV-1, SRV-PEV-2, SRV-PEV-5, SW-AMZ-PLGN, SW-PLGN-1, SW-PLGN-2]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,12 +120,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "GET ALL IP PREFIXES"
+    "GET ALL IP PREFIXES PER SITE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -132,18 +133,23 @@
      "output_type": "stream",
      "text": [
       "Servers pool\u001b[0m\n",
+      "\u001b[0m10.30.1.0/24\u001b[0m\n",
+      "\u001b[0mServers test pool\u001b[0m\n",
+      "\u001b[0m10.30.3.0/24\u001b[0m\n",
       "\u001b[0m"
      ]
     }
    ],
    "source": [
+    "# List all IPs prefixes from all sites\n",
     "nb_site = 'plgn'\n",
     "nb_role = 'plgn'\n",
     "IPv4 = 4\n",
     "get_all_ip_prefixes = list(nb.ipam.prefixes.filter(site = nb_site, role = nb_role))\n",
     "for ip_prefix in get_all_ip_prefixes:\n",
     "    if ip_prefix.family.value == IPv4:\n",
-    "        print(ip_prefix.description)"
+    "        print(ip_prefix.description)\n",
+    "        print(ip_prefix)"
    ]
   },
   {
@@ -155,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -169,24 +175,26 @@
        " 10.91.254.52/24]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# List all IPs from all devices\n",
     "get_all_ip_addresses = list(nb.ipam.ip_addresses.filter(device=get_all_devices))\n",
     "get_all_ip_addresses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#for device_ip in get_all_ip_addresses:\n",
-    "#    print(device_ip.interface.device.name)"
+    "for device_ip in get_all_ip_addresses:\n",
+    "    if device_ip in get_all_ip_prefixes:\n",
+    "        print(device_ip)\n"
    ]
   },
   {
