--- a/runner_nb_cfg.ipynb
+++ b/runner_nb_cfg.ipynb
@@ -10,25 +10,9 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 1,
-=======
-   "execution_count": 2,
->>>>>>> 67a80b07ec7dba1dcf9d581190abc0f31306f297
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pynetbox'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [2], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnornir_utils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mplugins\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfunctions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m print_result\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnornir\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtask\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Task, Result\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpynetbox\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnornir_napalm\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mplugins\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtasks\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m napalm_get\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnornir_napalm\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mplugins\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtasks\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m napalm_cli\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pynetbox'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nornir import InitNornir\n",
     "from nornir_netmiko.tasks import netmiko_send_command, netmiko_send_config\n",
@@ -42,7 +26,9 @@
     "#from nornir.core.inventory import Host\n",
     "import json\n",
     "import pprint\n",
-    "from ipaddress import IPv4Address"
+    "from ipaddress import IPv4Address\n",
+    "from ipaddress import IPv4Network\n",
+    "from jinja2 import Environment, FileSystemLoader"
    ]
   },
   {
@@ -55,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,25 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[SRV-PEV-1, SRV-PEV-2, SRV-PEV-5, SW-AMZ-PLGN, SW-PLGN-1, SW-PLGN-2]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nb_site = 'plgn'\n",
-    "nb_role = 'plgn'\n",
+    "#nb_role = 'plgn'\n",
     "get_all_devices = list(nb.dcim.devices.filter(site = nb_site))\n",
-    "get_all_devices"
+    "#get_all_devices"
    ]
   },
   {
@@ -141,21 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Servers pool\u001b[0m\n",
-      "\u001b[0m10.30.1.0/24\u001b[0m\n",
-      "\u001b[0mServers test pool\u001b[0m\n",
-      "\u001b[0m10.30.3.0/24\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# List all IPs prefixes from all sites\n",
     "nb_site = 'plgn'\n",
@@ -177,57 +140,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[10.30.1.105/24,\n",
-       " 10.30.1.108/24,\n",
-       " 10.30.1.248/24,\n",
-       " 10.30.1.251/24,\n",
-       " 10.30.1.252/24,\n",
-       " 10.91.254.52/24]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# List all IPs from all devices\n",
-    "get_all_ip_addresses = list(nb.ipam.ip_addresses.filter(device=get_all_devices))\n",
-    "get_all_ip_addresses"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for device_ip in get_all_ip_addresses:\n",
-    "    if device_ip in get_all_ip_prefixes:\n",
-    "        print(device_ip)\n"
+    "# List all IPs from all devices\n",
+    "get_all_ip_addresses = list(nb.ipam.ip_addresses.filter(device=get_all_devices))\n",
+    "#get_all_ip_addresses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GET ALL INTERFACES PER DEVICE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\u001b[0m'get_interfaces_ip'\u001b[0m: \u001b[0m{\u001b[0m'Ethernet0/1'\u001b[0m: \u001b[0m{\u001b[0m'ipv4'\u001b[0m: \u001b[0m{\u001b[0m'10.30.1.108'\u001b[0m: \u001b[0m{\u001b[0m'prefix_length'\u001b[0m: \u001b[0m24\u001b[0m}\u001b[0m}\u001b[0m}\u001b[0m,\n",
-      "                       \u001b[0m'Vlan1'\u001b[0m: \u001b[0m{\u001b[0m'ipv4'\u001b[0m: \u001b[0m{\u001b[0m'10.30.252.12'\u001b[0m: \u001b[0m{\u001b[0m'prefix_length'\u001b[0m: \u001b[0m24\u001b[0m}\u001b[0m}\u001b[0m}\u001b[0m}\u001b[0m}\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# List all interfaces from all devices\n",
+    "get_all_interfaces = list(nb.dcim.interfaces.filter(device=get_all_devices))\n",
+    "#get_all_interfaces"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CREATE TEMPLATE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "templates_path = \"./templates/\"\n",
+    "environment = Environment(loader=FileSystemLoader(templates_path))\n",
+    "template = environment.get_template(\"dhcpd_static.template\")\n",
+    "for device_ip in get_all_ip_addresses:\n",
+    "        for ip_prefix in get_all_ip_prefixes:\n",
+    "                if IPv4Address(device_ip.address.split('/')[0]) in IPv4Network(ip_prefix.prefix):\n",
+    "                        for device_interface in get_all_interfaces:\n",
+    "                                if device_ip.assigned_object.device.name == device_interface.device.name and device_interface.mac_address != None:\n",
+    "                                        content = template.render(\n",
+    "                                        device_name = device_interface.device.name,\n",
+    "                                        mac_address = device_interface.mac_address,\n",
+    "                                        ip_address = device_ip.address.split('/')[0]\n",
+    "                                        )\n",
+    "                                        print(content)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "device_type = nb.dcim.device_types.get(slug='cisco_ios').id\n",
     "device_type\n",
@@ -255,20 +229,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' for i in interfaces:\\n    print(i) '"
-      ]
-     },
-     "execution_count": 178,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "interface = nb.dcim.interfaces.get(name='',device='sw-plgn-1')\n",
     "interface\n",
@@ -285,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.4"
   },
   "orig_nbformat": 4,
   "vscode": {
