--- a/nb-wh-cfg.ipynb
+++ b/nb-wh-cfg.ipynb
@@ -2,30 +2,74 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flask import Flask, request"
+    "from flask import Flask, request\n",
+    "#import pynetbox"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on all addresses (0.0.0.0)\n",
+      " * Running on http://127.0.0.1:8080\n",
+      " * Running on http://10.68.5.5:8080\n",
+      "Press CTRL+C to quit\n",
+      "10.30.1.101 - - [11/Mar/2023 10:32:27] \"POST /api/fixed_ip HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61\n",
+      "10.30.1.101/24\n",
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:5000\n",
+      "Press CTRL+C to quit\n"
+     ]
+    }
+   ],
    "source": [
     "#Create a Flask instance\n",
-    "app = Flask(__name__)\n",
+    "netbox_ipam = Flask(__name__)\n",
     "\n",
-    "@app.route('/webhook', methods=['POST'])\n",
-    "def webhook():\n",
-    "    if request.method == 'POST':\n",
-    "        print(\"Data received from Webhook is: \", request.json)\n",
-    "        return \"Webhook received!\"\n",
+    "@netbox_ipam.route('/api/fixed_ip', methods=['POST'])\n",
+    "def mng_ip_address():\n",
+    "    ip_address = request.json [\"data\"][\"address\"]\n",
+    "    address_family = request.json[\"data\"][\"family\"][\"value\"]\n",
+    "    if  assigned_object_id := request.json[\"data\"][\"assigned_object_id\"]:\n",
+    "        print(assigned_object_id)\n",
+    "    print(ip_address)\n",
+    "    return \"Webhook received!\"\n",
     "\n",
-    "app.run(host='0.0.0.0', port=8080)\n",
-    "if __name__ == \"__main__\": app.run()"
+    "netbox_ipam.run(host='0.0.0.0', port=8080)\n",
+    "if __name__ == \"__main__\": netbox_ipam.run()"
    ]
   }
  ],
